css/parser/tests/recovery/at-rule/media/feature/output.stderr
error: Invalid media query
 --> $DIR/tests/errors/rome/invalid/media/feature/input.css:1:19
  |
1 | @media screen and {}
  |                   ^

